--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -8,12 +8,18 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:elevation="4dp"
+        android:radius="16dp"
+        android:padding="16dp"
+        android:background="#E0F7FA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:elevation="4dp"
+            android:radius="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +30,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="8dp"
                 android:orientation="vertical">
 
                 <TextView
