chore: added id to albumDescription

--- a/app/src/main/res/layout/album_detail_item.xml
+++ b/app/src/main/res/layout/album_detail_item.xml
@@ -46,10 +46,11 @@
                         android:paddingEnd="8dp"
                         android:paddingBottom="3dp"
                         android:text="@{album.name}"
+                        android:textColor="@color/black"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView5"
+                        android:id="@+id/albumDescription"
                         android:layout_width="match_parent"
                         android:layout_height="129dp"
                         android:fontFamily="@font/montserrat"
@@ -69,6 +70,7 @@
                             android:id="@+id/labelReleaseDate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/montserrat"
                             android:paddingStart="8dp"
                             android:paddingTop="3dp"
                             android:paddingEnd="8dp"
@@ -81,6 +83,7 @@
                             android:id="@+id/textView7"
                             android:layout_width="108dp"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/montserrat"
                             android:paddingStart="8dp"
                             android:paddingTop="3dp"
                             android:paddingEnd="8dp"
@@ -92,6 +95,7 @@
                             android:id="@+id/labelRecord"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/montserrat"
                             android:paddingStart="8dp"
                             android:paddingTop="3dp"
                             android:paddingEnd="8dp"
@@ -104,6 +108,7 @@
                             android:id="@+id/textRecord"
                             android:layout_width="108dp"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/montserrat"
                             android:paddingStart="8dp"
                             android:paddingTop="3dp"
                             android:paddingEnd="8dp"
@@ -121,6 +126,7 @@
                             android:id="@+id/labelGender"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/montserrat"
                             android:paddingStart="8dp"
                             android:paddingTop="3dp"
                             android:paddingEnd="8dp"
@@ -133,6 +139,7 @@
                             android:id="@+id/textGender"
                             android:layout_width="100dp"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/montserrat"
                             android:paddingStart="8dp"
                             android:paddingTop="3dp"
                             android:paddingEnd="8dp"
