inclusión de botón coleecionistas al menú

--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -9,6 +9,11 @@
     <item
         android:id="@+id/albumsRv"
         android:icon="@drawable/icon_albumes"
-        android:title="Albumes" />
+        android:title="Álbumes" />
+
+    <item
+        android:id="@+id/coleccionistas"
+        android:icon="@drawable/icon_coleccionistas"
+        android:title="Coleccionistas" />
 
 </menu>
