cambio modo vista detalles álbum

--- a/app/src/main/res/layout/comment_fragment.xml
+++ b/app/src/main/res/layout/comment_fragment.xml
@@ -19,8 +19,6 @@
         android:id="@+id/commentsRv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/comment_item">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        tools:listitem="@layout/comment_item" />
 
 </LinearLayout>
