--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -39,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:text="@{comment.rating}" />
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/albumDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@{comment.description}" />
