feat: added recycler view

--- a/app/src/main/res/layout/album_detail_fragment.xml
+++ b/app/src/main/res/layout/album_detail_fragment.xml
@@ -10,6 +10,14 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
-    <include layout="@layout/album_detail_item"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/albumRv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        tools:context=".view.AlbumDetailFragment"
+        tools:listitem="@layout/album_detail_item" />
 </FrameLayout>
