--- a/app/src/main/res/layout/album_detail_item.xml
+++ b/app/src/main/res/layout/album_detail_item.xml
@@ -12,7 +12,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="238dp"
+            android:layout_height="wrap_content"
             android:background="#A9DDFF"
             android:elevation="0dp"
             android:padding="0dp"
@@ -32,7 +32,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="199dp"
+                    android:layout_height="wrap_content"
                     android:background="#A9DDFF"
                     android:orientation="vertical"
                     android:padding="8dp">
@@ -40,14 +40,15 @@
                     <TextView
                         android:id="@+id/albumDescription"
                         android:layout_width="match_parent"
-                        android:layout_height="129dp"
+                        android:layout_height="wrap_content"
                         android:fontFamily="@font/montserrat"
                         android:paddingStart="8dp"
                         android:paddingTop="3dp"
                         android:paddingEnd="8dp"
                         android:paddingBottom="3dp"
                         android:text="@{album.description}"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -65,6 +66,7 @@
                             android:paddingBottom="3dp"
                             android:text="@string/album_release_date"
                             android:textColor="@color/black"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -77,7 +79,8 @@
                             android:paddingEnd="8dp"
                             android:paddingBottom="3dp"
                             android:text="@{album.releaseDate}"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
 
                         <TextView
                             android:id="@+id/labelRecord"
@@ -90,6 +93,7 @@
                             android:paddingBottom="3dp"
                             android:text="@string/album_record_label"
                             android:textColor="@color/black"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -102,7 +106,8 @@
                             android:paddingEnd="8dp"
                             android:paddingBottom="3dp"
                             android:text="@{album.recordLabel}"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -121,6 +126,7 @@
                             android:paddingBottom="3dp"
                             android:text="@string/album_genre"
                             android:textColor="@color/black"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -133,7 +139,8 @@
                             android:paddingEnd="8dp"
                             android:paddingBottom="3dp"
                             android:text="@{album.genre}"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
                     </LinearLayout>
 
                 </LinearLayout>
