fix: added accent to Á

--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -9,6 +9,6 @@
     <item
         android:id="@+id/albumsRv"
         android:icon="@drawable/icon_albumes"
-        android:title="Albumes" />
+        android:title="Álbumes"/>
 
 </menu>
