Feature/hu02 album detail (#12)
* chore: added picasso dependency

* chore: init parameters in class Album

* feat: added get of image with URL

* feaf: added correct logic to nav bar

* chore(Album): init attributes

* chore: updated color icons

* feat: added bottom nav view

* feat: added recycler view

* chore: updated style properties

* chore: updated styles

* chore: remove unused menu

* chore: label of fragment

* chore: updated color and album detail components and theme

* feat: added polity no cache and no store in image rendering

* feat: added title bar with the album's name

* fix: wrap content in layouts of album detail

* feat: increased font size to 20sp

* feat: added accent into A

* test: color bottom bar

* chore: added color to bottom nav bar

* chore: updated color to secondary according to the theme

* fix: added accent to Á

* chore(theme): added color secondary

* chore(theme): overlap attributes on theme bottom nav bar

* chore: add line to log

--- a/app/src/main/res/layout/album_fragment.xml
+++ b/app/src/main/res/layout/album_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.AlbumFragment"
-    android:background="#E0F7FA">
+    android:background="#FFFFFF">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -17,6 +17,8 @@
         android:id="@+id/albumsRv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
