--- a/app/src/main/res/layout/album_detail_fragment.xml
+++ b/app/src/main/res/layout/album_detail_fragment.xml
@@ -1,23 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
-    android:orientation="vertical"
-    tools:context=".view.AlbumDetailFragment">
-
+    tools:context=".view.AlbumDetailFragment"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/detailsAlbumRv"
+        android:id="@+id/albumRv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        tools:context=".view.AlbumDetailFragment"
         tools:listitem="@layout/album_detail_item" />
-
-</LinearLayout>
+</FrameLayout>
