--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,11 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="stroke_color">#95EDED</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="stroke_color">#FFFFFFFF</color>
+    <color name="teal_200">#FFFFFFFF</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#11A1FF</color>
+    <color name="secondary">#A9DDFF</color>
 </resources>
