Created the artist detail with the album list

--- a/app/src/main/res/layout/artist_detail_fragment.xml
+++ b/app/src/main/res/layout/artist_detail_fragment.xml
@@ -13,7 +13,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-        tools:context=".view.ArtistDetailFragment"
-        tools:listitem="@layout/artist_detail_item" />
+        tools:context=".view.ArtistDetailFragment" />
 
 </FrameLayout>
