Feature/hu04 artist detail (#27)
* Created the header for artist detail

* Created the artist detail with the album list

* Creted navigation to album detail from artist detail

* Integrated directions with artis list view and get the artist id

* Try to fix the bottom menu

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/artistFragment">
+    app:startDestination="@id/albumFragment">
     <fragment
         android:id="@+id/page_inicio"
         android:name="com.example.vinilosapp.view.InicioFragment"
@@ -38,6 +38,21 @@
         android:name="com.example.vinilosapp.view.ArtistFragment"
         android:label="@string/title_artists"
         tools:layout="@layout/artist_fragment" >
+        <action
+            android:id="@+id/action_artistFragment_to_artistDetailFragment"
+            app:destination="@id/artistDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/artistDetailFragment"
+        android:name="com.example.vinilosapp.view.ArtistDetailFragment"
+        android:label="@string/title_home"
+        tools:layout="@layout/artist_detail_fragment" >
+        <action
+            android:id="@+id/action_albumFragment_to_albumDetailFragment"
+            app:destination="@id/albumDetailFragment" />
+        <argument
+            android:name="artistId"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/commentFragment"
