--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,6 +34,33 @@
             app:destination="@id/albumFragment" />
     </fragment>
     <fragment
+        android:id="@+id/artistFragment"
+        android:name="com.example.vinilosapp.view.ArtistFragment"
+        android:label="@string/title_artists"
+        tools:layout="@layout/artist_fragment" >
+        <action
+            android:id="@+id/action_artistFragment_to_artistDetailFragment"
+            app:destination="@id/artistDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/artistDetailFragment"
+        android:name="com.example.vinilosapp.view.ArtistDetailFragment"
+        android:label="@string/title_home"
+        tools:layout="@layout/artist_detail_fragment" >
+        <action
+            android:id="@+id/action_albumFragment_to_albumDetailFragment"
+            app:destination="@id/albumDetailFragment" />
+        <argument
+            android:name="artistId"
+            app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/collectorsFragment"
+        android:name="com.example.vinilosapp.view.CollectorFragment"
+        android:label="Colleccionistas"
+        tools:layout="@layout/collector_fragment" >
+    </fragment>
+    <fragment
         android:id="@+id/commentFragment"
         android:name="com.example.vinilosapp.view.CommentFragment"
         android:label="Comentarios"
