fix: added title to strings values

--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/page_inicio"
         android:icon="@drawable/icon_inicio"
-        android:title="Inicio" />
+        android:title="@string/title_inicio" />
 
     <item
         android:id="@+id/albumFragment"
