inclusion de picasso y caching image

--- a/app/src/main/res/layout/artist_item.xml
+++ b/app/src/main/res/layout/artist_item.xml
@@ -32,16 +32,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:padding="8dp"
                 android:translationZ="@dimen/cardview_default_elevation"
                 tools:ignore="UseCompoundDrawables">
 
                 <ImageView
                     android:id="@+id/headerImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:src="@{artist.image}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
