--- a/app/src/main/res/layout/collector_item.xml
+++ b/app/src/main/res/layout/collector_item.xml
@@ -34,9 +34,8 @@
 
         <ImageView
             android:id="@+id/headerImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:src="@drawable/collector"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
