--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,9 @@
         <action
             android:id="@+id/action_albumFragment_to_albumDetailFragment"
             app:destination="@id/albumDetailFragment" />
+        <action
+            android:id="@+id/action_albumFragment_to_albumCreateFragment"
+            app:destination="@id/albumCreateFragment" />
     </fragment>
     <fragment
         android:id="@+id/albumDetailFragment"
@@ -29,6 +32,26 @@
         <action
             android:id="@+id/action_albumDetailFragment_to_albumFragment"
             app:destination="@id/albumFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/trackFragment"
+        android:name="com.example.vinilosapp.view.TrackFragment"
+        android:label="@string/title_tracks"
+        tools:layout="@layout/track_fragment" >
+        <action
+            android:id="@+id/action_trackFragment_to_trackDetailFragment"
+            app:destination="@id/trackDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/trackDetailFragment"
+        android:name="com.example.vinilosapp.view.TrackDetailFragment"
+        tools:layout="@layout/track_detail_fragment" >
+        <argument
+            android:name="trackId"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_trackDetailFragment_to_trackFragment"
+            app:destination="@id/trackFragment" />
     </fragment>
     <fragment
         android:id="@+id/artistFragment"
@@ -56,5 +79,14 @@
         android:name="com.example.vinilosapp.view.CollectorFragment"
         android:label="Colleccionistas"
         tools:layout="@layout/collector_fragment" >
+    </fragment>
+    <fragment
+        android:id="@+id/albumCreateFragment"
+        android:name="com.example.vinilosapp.view.AlbumCreateFragment"
+        android:label="@string/title_album_create"
+        tools:layout="@layout/album_create_fragment" >
+        <action
+            android:id="@+id/action_albumCreateFragment_to_albumFragment"
+            app:destination="@id/albumFragment" />
     </fragment>
 </navigation>
