--- a/app/src/main/res/layout/track_fragment.xml
+++ b/app/src/main/res/layout/track_fragment.xml
@@ -4,19 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.AlbumFragment"
+    tools:context=".view.TrackFragment"
     android:background="#FFFFFF">
 
-    <Button
-        android:id="@+id/create_album_button"
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginBottom="8dp"
-        android:text="Agregar álbum" />
+        android:layout_height="wrap_content" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/albumsRv"
+        android:id="@+id/tracksRv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
@@ -24,8 +22,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="58dp"
-        tools:context=".ui.AlbumFragment"
-        tools:listitem="@layout/album_item" />
+        tools:context=".ui.TrackFragment"
+        tools:listitem="@layout/track_item" />
 
 </FrameLayout>
