--- a/app/src/main/res/layout/album_create_fragment.xml
+++ b/app/src/main/res/layout/album_create_fragment.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:color="#00000000"
+                android:color="@color/white"
                 android:hint="@string/album_name" />
 
         </com.google.android.material.textfield.TextInputLayout>
