--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -20,13 +20,13 @@
             android:layout_height="wrap_content"
             android:elevation="1000dp"
             android:radius="22dp"
-            app:cardBackgroundColor="#FFFFFF"
+            app:cardBackgroundColor="@color/white"
             android:translationZ="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="#F8F8F8"
+            app:strokeColor="@color/backgroundColorList"
             app:strokeWidth="4dp">
 
             <LinearLayout
