--- a/app/src/main/res/layout/track_fragment.xml
+++ b/app/src/main/res/layout/track_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.TrackFragment"
-    android:background="#FFFFFF">
+    android:background="@color/white">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -17,7 +17,7 @@
         android:id="@+id/tracksRv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:background="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
